默认隐藏云盘

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3955,7 +3955,8 @@
 				],
 				"refer": [
 					"html/show/add-comment.html",
-					"html/register/login.html"
+					"html/register/login.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
