--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2885,7 +2885,8 @@
 					"css/utils/preview.css",
 					"js/mui.zoom.js",
 					"fonts/fangzheng.ttf",
-					"js/mui.previewimage.js"
+					"js/mui.previewimage.js",
+					"image/qiuzhi/qiuzhi_noanswer.png"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html",
