--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4283,7 +4283,8 @@
 					"fonts/mui.ttf"
 				],
 				"refer": [
-					"html/mine/apply-bycode.html"
+					"html/mine/apply-bycode.html",
+					"html/mine/apply-bycode1.html"
 				],
 				"priority": 0
 			}
