--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4284,8 +4284,7 @@
 					"fonts/mui.ttf"
 				],
 				"refer": [
-					"html/mine/apply-bycode.html",
-					"html/mine/apply-bycode1.html"
+					"html/mine/apply-bycode.html"
 				],
 				"priority": 0
 			}
