--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3219,7 +3219,20 @@
 					"fonts/mui.ttf",
 					"js/utils/events.js",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/mui.pullToRefresh.js",
+					"css/utils/pullToRefresh.css",
+					"js/utils/cryption.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/utils/MultiMedia.js",
+					"css/utils/MultiMedia.css",
+					"js/cloud/AndroidFileSystem.js",
+					"css/utils/preview.css",
+					"js/mui.zoom.js",
+					"js/utils/compress.js",
+					"js/utils/CloudFileUtil.js",
+					"js/qiniu/qiniu.js",
+					"js/mui.previewimage.js"
 				],
 				"refer": [],
 				"priority": 0
