申请入群 弹出框样式

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4349,7 +4349,8 @@
 					"image/utils/default_personalimage.png",
 					"js/mui.min.js",
 					"fonts/fangzheng.ttf",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"js/utils/events.js"
 				],
 				"refer": [
 					"html/cloud/member-pay.html"
