--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -868,7 +868,8 @@
 					"html/mine/qun_manage_1.html",
 					"html/mine/ReadQRCode.html",
 					"html/quan/aboutme.html",
-					"html/quan/pub-dynamic.html"
+					"html/quan/pub-dynamic.html",
+					"html/mine/qun_manage_a.html"
 				],
 				"priority": 0
 			},
@@ -4331,12 +4332,14 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/utils/cryption.js",
 					"js/utils/CloudFileUtil.js",
-					"js/qiniu/qiniu.js"
+					"js/qiniu/qiniu.js",
+					"css/mine/manager_data.css"
 				],
 				"refer": [
 					"html/quan/group-pInfo.html",
 					"html/mine/qun_manage_invite_a.html",
-					"html/mine/qun_manage_info.html"
+					"html/mine/qun_manage_info.html",
+					"html/mine/qun_data_details.html"
 				],
 				"priority": 0
 			},
