--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2789,7 +2789,8 @@
 					"css/iconfont/iconfont.css",
 					"fonts/iconfont.ttf",
 					"js/libs/crypto-js/crypto-js.js",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [
 					"html/qiuzhi/expert-detail.html",
@@ -3593,7 +3594,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"/image/utils/default_load_2_1.gif",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"fonts/mui.ttf"
 				],
 				"refer": [
 					"html/utils/customizeCity.html",
