--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3437,7 +3437,8 @@
 					"css/qiuzhi/qiuzhi-addAnswer.css",
 					"js/mui.zoom.js",
 					"js/mui.previewimage.js",
-					"css/utils/preview.css"
+					"css/utils/preview.css",
+					"js/utils/recordvideoutil.js"
 				],
 				"refer": [],
 				"priority": 0
