--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -156,7 +156,7 @@
 					"ldpi": "unpackage/res/icons/48x48.png", /*大屏程序图标，分辨率：48x48*/
 					"hdpi": "unpackage/res/icons/72x72.png", /*高分屏程序图标，分辨率：72x72*/
 					"xhdpi": "unpackage/res/icons/96x96.png",/*720P高分屏程序图标，分辨率：96x96*/
-					"xxhdpi": "unpackage/res/icons/144x144.png"
+					"xxhdpi": "unpackage/res/icons/144x144.png","xxxhdpi":"unpackage/res/icons/192x192.png"
 				}
 			},
 			"splashscreen": {
@@ -847,8 +847,7 @@
 					"image/quan/aboutme.png",
 					"image/quan/Scan.png",
 					"js/qiuzhi/delContent_pop.js",
-					null,
-					"js/main/slide_navigation.js"
+					null
 				],
 				"refer": [
 					"html/homework/homework-tea.html",
@@ -869,10 +868,7 @@
 					"html/mine/qun_manage_1.html",
 					"html/mine/ReadQRCode.html",
 					"html/quan/aboutme.html",
-					"html/quan/pub-dynamic.html",
-					"html/mine/qun_manage_a.html",
-					"html/index/mine.html",
-					"html/cloud/order-member.html"
+					"html/quan/pub-dynamic.html"
 				],
 				"priority": 0
 			},
@@ -1950,8 +1946,7 @@
 					"html/show/show_home.html",
 					"html/qiuzhi/expert-detail.html",
 					"html/qiuzhi/qiuzhi-questionSearch.html",
-					"html/register/login.html",
-					"html/cloud/order-member.html"
+					"html/register/login.html"
 				],
 				"priority": 0
 			},
@@ -2789,14 +2784,9 @@
 					"css/iconfont/iconfont.css",
 					"fonts/iconfont.ttf",
 					"js/libs/crypto-js/crypto-js.js",
-					"fonts/fangzheng.ttf",
-					"image/utils/default_personalimage.png"
+					"fonts/fangzheng.ttf"
 				],
-				"refer": [
-					"html/qiuzhi/expert-detail.html",
-					"html/qiuzhi/qiuzhi-questionSearch.html",
-					"html/register/login.html"
-				],
+				"refer": [],
 				"priority": 0
 			},
 			"html/qiuzhi/qiuzhi-sub.html": {
@@ -3437,8 +3427,7 @@
 					"css/qiuzhi/qiuzhi-addAnswer.css",
 					"js/mui.zoom.js",
 					"js/mui.previewimage.js",
-					"css/utils/preview.css",
-					"js/utils/recordvideoutil.js"
+					"css/utils/preview.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -3595,8 +3584,7 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"/image/utils/default_load_2_1.gif",
-					"fonts/fangzheng.ttf",
-					"fonts/mui.ttf"
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/utils/customizeCity.html",
@@ -4339,72 +4327,11 @@
 					"js/utils/postData.js",
 					"css/mine/manager_member.css",
 					"js/utils/RSAEncrypt.js",
-					"js/libs/crypto-js/crypto-js.js",
-					"js/utils/cryption.js",
-					"js/utils/CloudFileUtil.js",
-					"js/qiniu/qiniu.js",
-					"css/mine/manager_data.css"
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [
 					"html/quan/group-pInfo.html",
-					"html/mine/qun_manage_invite_a.html",
-					"html/mine/qun_manage_info.html",
-					"html/mine/qun_data_details.html"
-				],
-				"priority": 0
-			},
-			"html/cloud/order-member.html": {
-				"resources": [
-					"js/cloud/order-member.js",
-					"css/cloud/order-member.css",
-					"css/mui.min.css",
-					"css/utils/common.css",
-					"image/utils/default_personalimage.png",
-					"js/mui.min.js",
-					"fonts/fangzheng.ttf",
-					"fonts/mui.ttf",
-					"js/utils/events.js"
-				],
-				"refer": [
-					"html/cloud/member-pay.html"
-				],
-				"priority": 0
-			},
-			"html/cloud/member-pay.html": {
-				"resources": [
-					"css/iconfont/iconfont.css",
-					"js/mui.min.js",
-					"fonts/fangzheng.ttf",
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"fonts/iconfont.ttf",
-					"css/utils/common.css"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"html/index/firstPage.html": {
-				"resources": [
-					"js/storageKeyName.js",
-					"js/utils/events.js",
-					"js/libs/RSA/Barrett.js",
-					"js/libs/crypto-js/require.js",
-					"js/libs/myStorage/myStorage.js",
-					"js/libs/crypto-js/crypto-js.js",
-					"js/publicProtocol.js",
-					"js/libs/jquery.js",
-					"js/mui.min.js",
-					"js/libs/RSA/BigInt.js",
-					"css/mui.min.css",
-					"js/utils/signHmacSHA1.js",
-					"js/libs/RSA/RSA.js",
-					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js",
-					"image/ios_1242-2208.png",
-					"js/utils/app-update.js"
-				],
-				"refer": [
-					"html/index/index.html"
+					"html/mine/qun_manage_invite_a.html"
 				],
 				"priority": 0
 			}
