--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3089,7 +3089,8 @@
 					"fonts/fangzheng.ttf",
 					"js/mui.previewimage.js",
 					"fonts/mui.ttf",
-					"image/qiuzhi/qiuzhi_noanswer.png"
+					"image/qiuzhi/qiuzhi_noanswer.png",
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html",
@@ -3438,7 +3439,9 @@
 					"js/mui.zoom.js",
 					"js/mui.previewimage.js",
 					"css/utils/preview.css",
-					"js/utils/recordvideoutil.js"
+					"js/utils/recordvideoutil.js",
+					"js/utils/load.js",
+					"image/utils/playvideo.png"
 				],
 				"refer": [],
 				"priority": 0
