--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2836,7 +2836,8 @@
 					"image/qiuzhi/add-question.png.png",
 					"js/mui.lazyload.js",
 					"js/mui.lazyload.img.js",
-					"image/utils/default_load_2.gif"
+					"image/utils/default_load_2.gif",
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-question.html",
@@ -3090,7 +3091,8 @@
 					"js/mui.previewimage.js",
 					"fonts/mui.ttf",
 					"image/qiuzhi/qiuzhi_noanswer.png",
-					"image/utils/playvideo.png"
+					"image/utils/playvideo.png",
+					"js/utils/video.js"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html",
