0005718: 求知的回答列表中的头像、回答详情的头像、评论的头像连续点击进入多次求知个人中心

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2902,7 +2902,8 @@
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html",
-					"html/register/login.html"
+					"html/register/login.html",
+					"html/qiuzhi/expert-detail.html"
 				],
 				"priority": 0
 			},
