--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -491,7 +491,8 @@
 					"css/utils/preview.css",
 					"js/mui.lazyload.img.js",
 					"image/dynamic/praise.png",
-					"css/show/show.css"
+					"css/show/show.css",
+					"js/utils/video.js"
 				],
 				"refer": [
 					"html/quan/space-detail.html",
@@ -2270,7 +2271,11 @@
 					"css/homework/publish-answer.css",
 					"fonts/fangzheng.ttf",
 					"js/utils/CloudFileUtil.js",
-					"js/qiniu/qiniu.js"
+					"js/qiniu/qiniu.js",
+					"js/utils/load.js",
+					"js/utils/recordvideoutil.js",
+					"js/utils/video.js",
+					"image/utils/playvideo.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -3443,7 +3448,8 @@
 					"css/utils/preview.css",
 					"js/utils/recordvideoutil.js",
 					"js/utils/load.js",
-					"image/utils/playvideo.png"
+					"image/utils/playvideo.png",
+					"js/utils/video.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -3645,7 +3651,8 @@
 					"js/utils/RSAEncrypt.js",
 					"image/dynamic/praise.png",
 					"fonts/fangzheng.ttf",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"js/utils/video.js"
 				],
 				"refer": [
 					"html/utils/customizeCity.html",
