关注的人的逻辑

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3763,7 +3763,9 @@
 					"image/utils/default_personalimage.png",
 					"fonts/iconfont.ttf"
 				],
-				"refer": [],
+				"refer": [
+					"html/qiuzhi/expert-detail.html"
+				],
 				"priority": 0
 			},
 			"html/qiuzhi/qiuzhi-expertAllComment.html": {
