--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2702,9 +2702,13 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"js/utils/showvideoutil.js",
+					"js/utils/recordvideoutil.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/cloud/record_student_add.html"
+				],
 				"priority": 0
 			},
 			"html/cloud/record_student_sub.html": {
@@ -4430,6 +4434,14 @@
 				"refer": [
 					"html/index/index.html"
 				],
+				"priority": 0
+			},
+			"html/cloud/record_student_add.html": {
+				"resources": [
+					"js/utils/MultiMedia.js",
+					"css/utils/MultiMedia.css"
+				],
+				"refer": [],
 				"priority": 0
 			}
 		},
