--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2384,7 +2384,10 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"js/utils/showaudio.js",
+					"js/utils/showvideoutil.js",
+					"css/utils/audiopopover.css"
 				],
 				"refer": [
 					"html/cloud/app_notes_create.html"
