--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3328,7 +3328,8 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"fonts/fangzheng.ttf",
-					"image/utils/default_personalimage.png"
+					"image/utils/default_personalimage.png",
+					"image/mine/invite_none_0.png"
 				],
 				"refer": [
 					"html/quan/zone_main.html"
