--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2387,7 +2387,8 @@
 					"js/utils/RSAEncrypt.js",
 					"js/utils/showaudio.js",
 					"js/utils/showvideoutil.js",
-					"css/utils/audiopopover.css"
+					"css/utils/audiopopover.css",
+					"js/utils/playutil.js"
 				],
 				"refer": [
 					"html/cloud/app_notes_create.html"
@@ -4023,7 +4024,30 @@
 					"js/cloud/AndroidFileSystem.js",
 					"js/utils/recordvideoutil.js",
 					"image/utils/playvideo.png",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"js/utils/showaudio.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"css/utils/audiopopover.css",
+					"js/utils/playutil.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/mui.zoom.js",
+					"js/mui.min.js",
+					"js/utils/compress.js",
+					"js/mui.previewimage.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/storageKeyName.js",
+					"js/libs/crypto-js/require.js",
+					"js/utils/showvideoutil.js",
+					"css/utils/common.css",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/libs/RSA/RSA.js",
+					"js/utils/RSAEncrypt.js",
+					"css/utils/preview.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -4494,6 +4518,27 @@
 				"resources": [
 					"js/utils/MultiMedia.js",
 					"css/utils/MultiMedia.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/qiuzhi/modifyExpertNote.html": {
+				"resources": [
+					"js/publicQiuzhiProtocol.js",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
