--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -534,7 +534,8 @@
 					"fonts/fangzheng.ttf",
 					"js/quan/class_space.js",
 					"css/utils/bubble.css",
-					"css/utils/preview.css"
+					"css/utils/preview.css",
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/quan/class-group.html"
