求知问题 求知回答 班级空间 更改刷新模块

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2901,7 +2901,8 @@
 					"css/utils/preview.css"
 				],
 				"refer": [
-					"html/qiuzhi/experts_main.html"
+					"html/qiuzhi/experts_main.html",
+					"html/qiuzhi/qiuzhi-addAnswer.html"
 				],
 				"priority": 0
 			},
