如果在与我相关处 删除自己的动态 在与我相关处仍可进入此条动态详情，动态详情为空 建议提示动态未找到此动态

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1546,7 +1546,9 @@
 				],
 				"refer": [
 					"html/homework/workdetail-stu.html",
-					"html/quan/reply-aboutMe.html"
+					"html/quan/reply-aboutMe.html",
+					"html/quan/space-detail.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
