1、对某专家提问 @专家 2、有的只显示播放按钮的bug

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3117,7 +3117,9 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/storageKeyName.js"
+					"js/storageKeyName.js",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html"
