--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -537,7 +537,8 @@
 					"css/utils/bubble.css",
 					"css/utils/preview.css",
 					"image/utils/playvideo.png",
-					"image/utils/loading.gif"
+					"image/utils/loading.gif",
+					"js/utils/h5fresh.js"
 				],
 				"refer": [
 					"html/quan/class-group.html",
@@ -2875,7 +2876,8 @@
 					"image/utils/default_load_2.gif",
 					"image/utils/playvideo.png",
 					"js/libs/jquery.lazyload.min.js",
-					"image/utils/video-loading.gif"
+					"image/utils/video-loading.gif",
+					"image/utils/loading.gif"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-question.html",
@@ -2904,7 +2906,8 @@
 					"js/qiuzhi/qiuzhi-questionSub.js",
 					"js/libs/crypto-js/crypto-js.js",
 					"css/qiuzhi/qiuzhi-questionSub.css",
-					"css/utils/preview.css"
+					"css/utils/preview.css",
+					"js/utils/h5fresh.js"
 				],
 				"refer": [
 					"html/qiuzhi/experts_main.html",
