--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1091,7 +1091,8 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/utils/h5fresh.js",
 					"image/homework/submitted.png",
-					"image/homework/commented.png"
+					"image/homework/commented.png",
+					"image/utils/loading.gif"
 				],
 				"refer": [
 					"html/homework/homework-publish.html",
@@ -1545,7 +1546,9 @@
 					"js/utils/events.js",
 					"fonts/fangzheng.ttf",
 					"js/quan/about-me.js",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"js/utils/h5fresh.js",
+					"image/utils/loading.gif"
 				],
 				"refer": [
 					"html/homework/workdetail-stu.html",
@@ -2907,7 +2910,8 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"css/qiuzhi/qiuzhi-questionSub.css",
 					"css/utils/preview.css",
-					"js/utils/h5fresh.js"
+					"js/utils/h5fresh.js",
+					"image/utils/loading.gif"
 				],
 				"refer": [
 					"html/qiuzhi/experts_main.html",
