--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -630,7 +630,8 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"fonts/fangzheng.ttf",
 					"js/utils/compress.js",
-					"js/utils/showvideoutil.js"
+					"js/utils/showvideoutil.js",
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/quan/studentpersonalimge.html"
@@ -2730,7 +2731,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/utils/showvideoutil.js",
-					"js/utils/recordvideoutil.js"
+					"js/utils/recordvideoutil.js",
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/cloud/record_student_add.html"
@@ -2881,7 +2883,8 @@
 					"image/utils/playvideo.png",
 					"js/libs/jquery.lazyload.min.js",
 					"image/utils/video-loading.gif",
-					"image/utils/loading.gif"
+					"image/utils/loading.gif",
+					"image/qiuzhi/qiuzhi_noanswer.png"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-question.html",
@@ -4250,7 +4253,8 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/libs/jquery.lazyload.min.js",
 					"image/utils/default_load_2.gif",
-					"js/utils/h5fresh.js"
+					"js/utils/h5fresh.js",
+					"image/utils/loading.gif"
 				],
 				"refer": [
 					"html/check/area-choose.html",
