关闭h5的引用，班级空间，个人空间查看的人和点赞的人 修改返回逻辑

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3688,7 +3688,8 @@
 					"js/utils/RSAEncrypt.js",
 					"/image/utils/default_load_2_1.gif",
 					"fonts/fangzheng.ttf",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"image/utils/loading.gif"
 				],
 				"refer": [
 					"html/utils/customizeCity.html",
