--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -637,7 +637,8 @@
 					"fonts/fangzheng.ttf",
 					"js/utils/compress.js",
 					"js/utils/showvideoutil.js",
-					"image/utils/playvideo.png"
+					"image/utils/playvideo.png",
+					"js/utils/playutil.js"
 				],
 				"refer": [
 					"html/quan/studentpersonalimge.html"
@@ -709,7 +710,9 @@
 					"fonts/fangzheng.ttf",
 					"/storage/emulated/0/tencent/TIMfile_recv/%S]0@_9]P%7B07KEYX(U2X%7DTT.png",
 					"/storage/emulated/0/tencent/TIMfile_recv/%2PLKECVOE6LS%7BQ8W4%7D%7B$L3.png",
-					"image/utils/playvideo.png"
+					"image/utils/playvideo.png",
+					"js/utils/load.js",
+					"js/utils/video.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -869,7 +872,8 @@
 					"image/quan/Scan.png",
 					"js/qiuzhi/delContent_pop.js",
 					null,
-					"js/main/slide_navigation.js"
+					"js/main/slide_navigation.js",
+					"js/publicHomeworkProtocol.js"
 				],
 				"refer": [
 					"html/homework/homework-tea.html",
@@ -2741,7 +2745,12 @@
 					"js/utils/RSAEncrypt.js",
 					"js/utils/showvideoutil.js",
 					"js/utils/recordvideoutil.js",
-					"image/utils/playvideo.png"
+					"image/utils/playvideo.png",
+					"js/utils/cryption.js",
+					"js/utils/playutil.js",
+					"js/qiuzhi/delContent_pop.js",
+					"js/utils/CloudFileUtil.js",
+					"js/qiniu/qiniu.js"
 				],
 				"refer": [
 					"html/cloud/record_student_add.html"
@@ -2940,7 +2949,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"image/qiuzhi/qiuzhi_noanswer.png"
 				],
 				"refer": [
 					"html/qiuzhi/experts_main.html",
@@ -3161,7 +3171,8 @@
 					"js/storageKeyName.js",
 					"js/mui.pullToRefresh.js",
 					"js/mui.pullToRefresh.material.js",
-					"image/utils/loading.gif"
+					"image/utils/loading.gif",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html",
@@ -3869,7 +3880,8 @@
 					"js/utils/RSAEncrypt.js",
 					"image/utils/default_personalimage.png",
 					"fonts/iconfont.ttf",
-					"image/utils/loading.gif"
+					"image/utils/loading.gif",
+					"image/mine/invite_none_0.png"
 				],
 				"refer": [
 					"html/qiuzhi/expert-detail.html"
