巨丑的微课首页

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2004,7 +2004,8 @@
 					"html/qiuzhi/expert-detail.html",
 					"html/qiuzhi/qiuzhi-questionSearch.html",
 					"html/register/login.html",
-					"html/cloud/order-member.html"
+					"html/cloud/order-member.html",
+					"html/micro-course/course-home.html"
 				],
 				"priority": 0
 			},
@@ -4624,6 +4625,66 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/micro-course/course-home.html": {
+				"resources": [
+					"js/utils/webviewGroup.js",
+					"fonts/mui.ttf",
+					"js/mui.min.js",
+					"js/utils/events.js",
+					"css/mui.min.css",
+					"css/utils/common.css",
+					"js/libs/jquery.js",
+					"html/micro-course/course-attended.html",
+					"html/micro-course/course-all.html"
+				],
+				"refer": [
+					"html/micro-course/course-search.html"
+				],
+				"priority": 0
+			},
+			"html/micro-course/course-search.html": {
+				"resources": [
+					"js/mui.pullToRefresh.js",
+					"css/mine/search.css",
+					"js/mui.min.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/micro-course/course-search.js",
+					"css/mui.min.css",
+					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/micro-course/course-attended.html": {
+				"resources": [
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"css/micro-course/course-list.css",
+					"js/micro-course/course-list.js",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/utils/events.js",
+					"image/utils/loading.gif"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/micro-course/course-all.html": {
+				"resources": [
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"css/micro-course/course-list.css",
+					"js/micro-course/course-list.js",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/utils/events.js",
+					"image/utils/loading.gif"
 				],
 				"refer": [],
 				"priority": 0
