展现界面逻辑

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3024,7 +3024,30 @@
 					"js/main/slide_navigation.js",
 					"js/utils/slide-selector.js",
 					"html/show/show-sub.html",
-					"js/storageKeyName.js"
+					"js/storageKeyName.js",
+					"js/utils/webviewGroup.js",
+					"js/mui.zoom.js",
+					"js/utils/video.js",
+					"css/show/show-home.css",
+					"js/libs/jquery.lazyload.min.js",
+					"css/icons-extra.css",
+					"css/utils/preview.css",
+					"html/show/show-all.html",
+					"html/show/show-attended.html",
+					"css/utils/pullToRefresh.css",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/myStorage/myStorage.js",
+					"css/iconfont/iconfont.css",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/publicProtocol.js",
+					"js/libs/RSA/BigInt.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [
 					"html/show/show-sub1.html",
@@ -4682,6 +4705,62 @@
 					"js/micro-course/course-search.js",
 					"css/mui.min.css",
 					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/show/show-all.html": {
+				"resources": [
+					"js/show/show_list.js",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"css/utils/common.css",
+					"fonts/fangzheng.ttf",
+					"css/utils/pullToRefresh.css",
+					"css/show/show-list.css",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"css/utils/fresh.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/show/show-attended.html": {
+				"resources": [
+					"js/show/show_list.js",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"image/utils/loading.gif",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"css/utils/fresh.css",
+					"css/utils/common.css",
+					"fonts/fangzheng.ttf",
+					"css/show/show-list.css"
 				],
 				"refer": [],
 				"priority": 0
