--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4640,7 +4640,8 @@
 				],
 				"refer": [
 					"html/micro-course/course-all.html",
-					"html/micro-course/course-search.html"
+					"html/micro-course/course-search.html",
+					"html/micro-course/course-introduction.html"
 				],
 				"priority": 0
 			},
@@ -4682,6 +4683,55 @@
 					"js/micro-course/course-search.js",
 					"css/mui.min.css",
 					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/micro-course/course-introduction.html": {
+				"resources": [
+					"js/publicQiuzhiProtocol.js",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"image/clip.png",
+					"js/publicMicroClass.js",
+					"js/libs/crypto-js/crypto-js.js"
+				],
+				"refer": [
+					"html/micro-course/history-records.html"
+				],
+				"priority": 0
+			},
+			"html/micro-course/history-records.html": {
+				"resources": [
+					"js/mui.pullToRefresh.js",
+					"image/cloud/notes_bg2.jpg",
+					"js/mui.pullToRefresh.material.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"image/utils/loading.gif",
+					"js/libs/myStorage/myStorage.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"image/utils/playvideo.png",
+					"js/libs/RSA/RSA.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
